# feedparser-to-feedgen

./: pyproject.toml
feedparser_to_feedgen/: __init__.py  pp2pg.py
