[tool.poetry]
name = "feedparser-to-feedgen"
version = "0.1.0"
description = ""
authors = ["EkkoG <beijiu572@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedgen = "^1.0.0"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
